--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.pageseeder.bridge</groupId>
   <artifactId>pso-bridge</artifactId>
-  <version>0.9.0-alpha.1</version>
+  <version>0.9.0</version>
   <name>PageSeeder Bridge</name>
   <description>Java API to connect to a PageSeeder server</description>
   <url>https://www.pageseeder.org/projects/bridge.html</url>
@@ -13,7 +13,7 @@
       <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
-  
+
    <developers>
     <developer>
       <name>Christophe Lauret</name>
