Switch to Java 8, removed dryrun option, cleaned up gradle script

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 
-longDescription=Java API to connect to a PageSeeder server
-url=https://www.pageseeder.org/projects/bridge.html
-scmName=bridge
+title=PageSeeder Bridge
+description=Java API to connect to a PageSeeder server
+website=https://www.pageseeder.org/projects/bridge.html
+gitName=bridge
