--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,16 @@
 plugins {
-  // To publish to bintray
   id "com.jfrog.bintray" version "1.7"
 }
 
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
-group = 'org.pageseeder.bridge'
-version = file('version.txt').text
+group       = 'org.pageseeder.bridge'
+version     = file('version.txt').text
+description = "$title"
 
-description = "PageSeeder Bridge"
-
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
   maven { url 'http://dl.bintray.com/pageseeder/maven' }
@@ -38,10 +36,6 @@ dependencies {
 publishing {
   publications {
     mavenJava(MavenPublication) {
-      groupId "${project.group}"
-      artifactId "${project.name}"
-      version "${project.version}"
-
       from components.java
 
       artifact sourceJar {
@@ -55,27 +49,27 @@ publishing {
       pom.withXml {
         asNode().children().last() + {
           resolveStrategy = Closure.DELEGATE_FIRST
-          name "${project.description}"
-          description "$longDescription"
-          url "$url"
+          name        "$title"
+          description "$description"
+          url         "$website"
 
-	      licenses {
-	        license {
-	          name 'The Apache Software License, Version 2.0'
-	          url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-	        }
-	      }
+          licenses {
+            license {
+              name 'The Apache Software License, Version 2.0'
+              url  'http://www.apache.org/licenses/LICENSE-2.0.txt'
+            }
+          }
 
-	      organization {
-	       name 'Allette Systems'
-	       url 'https://www.allette.com.au'
-	      }
-	
-	      scm {
-	        connection "scm:git:git@github.com:pageseeder/${scmName}.git"
-	        developerConnection "scm:git:git@github.com:pageseeder/${scmName}.git"
-	        url "git@github.com:pageseeder/${scmName}.git"
-	      }
+          organization {
+            name 'Allette Systems'
+            url  'https://www.allette.com.au'
+          }
+  
+          scm {
+            url                 "git@github.com:pageseeder/${gitName}.git"
+            connection          "scm:git:git@github.com:pageseeder/${gitName}.git"
+            developerConnection "scm:git:git@github.com:pageseeder/${gitName}.git"
+          }
 
         }
       }
@@ -91,20 +85,18 @@ bintray {
   // Reference to Maven config
   publications = ['mavenJava'] 
 
-  dryRun = true
   publish = true
 
   pkg {
-    repo = 'maven'
-    name = "${scmName}"
-    userOrg = 'pageseeder'
-    desc = "$longDescription"
-    websiteUrl = "$url"
-    vcsUrl = "https://github.com/pageseeder/${scmName}.git"
-    licenses = ['Apache-2.0']
-    labels = ['java', 'pageseeder']
-
-    githubRepo = "pageseeder/${scmName}"
+    repo       = 'maven'
+    name       = "${gitName}"
+    userOrg    = 'pageseeder'
+    desc       = "$description"
+    websiteUrl = "$website"
+    vcsUrl     = "https://github.com/pageseeder/${gitName}.git"
+    licenses   = ['Apache-2.0']
+    labels     = ['java', 'pageseeder']
+    githubRepo = "pageseeder/${gitName}"
     githubReleaseNotesFile = 'README.md'
 
     version {
@@ -114,7 +106,6 @@ bintray {
 
 }
 
-
 task sourceJar(type: Jar) {
   description 'Packages up the source in a Jar for Maven publishing'
   from sourceSets.main.allJava
@@ -122,7 +113,7 @@ task sourceJar(type: Jar) {
 
 javadoc.options.addStringOption('Xdoclint:none', '-quiet')
 
-task javadocJar (type: Jar, dependsOn: javadoc) {
+task javadocJar(type: Jar, dependsOn: javadoc) {
   description 'Packages up the javadoc in a Jar for Maven publishing'
   from javadoc.destinationDir
 }
