--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@ plugins {
   id "com.jfrog.bintray" version "1.7"
 }
 
-group       = 'org.pageseeder.bridge'
-version     = file('version.txt').text
+ext {
+  globalVersion = file('version.txt').text
+}
+
+group       = 'org.pageseeder.berlioz'
+version     = "$globalVersion"
 description = "$title"
 
 apply plugin: 'java'
@@ -33,3 +37,20 @@ dependencies {
   )
 
 }
+
+
+subprojects {
+  group   = 'org.pageseeder.bridge'
+  version = "$globalVersion"
+
+  apply plugin: 'java'
+
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+
+  repositories {
+    maven { url 'http://dl.bintray.com/pageseeder/maven' }
+    jcenter()
+  }
+}
+
