--- a/pso-bridge-berlioz/build.gradle
+++ b/pso-bridge-berlioz/build.gradle
@@ -16,7 +16,8 @@ dependencies {
   )
 
   compileOnly (
-    'javax.servlet:javax.servlet-api:3.1.0'
+    'javax.servlet:javax.servlet-api:3.1.0',
+    'org.eclipse.jdt:org.eclipse.jdt.annotation:2.0.0'
   )
 
   testCompile (
