--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ title=PageSeeder Bridge
 description=Java API to connect to a PageSeeder server
 website=https://www.pageseeder.org/projects/bridge.html
 gitName=bridge
-labels=java,api,pageseeder
+labels=java,api,pageseeder,berlioz,http
