--- a/pso-bridge-berlioz/build.gradle
+++ b/pso-bridge-berlioz/build.gradle
@@ -1,6 +1,7 @@
-description = "Simple jar for Servlet 3.0 to make it easier to configure a Berlioz site"
+description = "Servlets and Berlioz generators for using the bridge in a Berlioz app"
 
 apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
 apply from: "$rootDir/gradle/publishing.gradle"
 
 // Dependencies of the project
