--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,11 @@
 plugins {
   id 'java-library'
   id 'maven-publish'
-  id 'com.jfrog.bintray' version '1.8.5'
+  id 'io.codearte.nexus-staging' version '0.30.0'
 }
 
 ext {
   globalVersion = file('version.txt').text
-}
-
-repositories {
-  maven { url 'https://dl.bintray.com/pageseeder/maven' }
-  jcenter()
 }
 
 allprojects {
@@ -18,9 +13,7 @@ allprojects {
   version = "$globalVersion"
 
   apply plugin: 'java-library'
-  apply plugin: 'maven-publish'
-  apply plugin: 'com.jfrog.bintray'
-  apply from: "$rootDir/gradle/publishing.gradle"
+  apply from: "$rootDir/gradle/publish-mavencentral.gradle"
 
   java {
     withJavadocJar()
@@ -30,8 +23,12 @@ allprojects {
   }
 
   repositories {
-    maven { url 'https://dl.bintray.com/pageseeder/maven' }
-    jcenter()
+    mavenCentral {
+      url = uri("https://maven-central.storage.googleapis.com/maven2")
+    }
+
+    // Takes our libraries immediately as the maven central should take hours to get synchronized.
+    maven { url 'https://s01.oss.sonatype.org/content/groups/public/' }
   }
 
   jar {
