--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ description=Java API to connect to a PageSeeder server
 website=https://www.pageseeder.org/projects/bridge.html
 gitName=bridge
 labels=java,api,pageseeder,berlioz,http
+gnsp.disableApplyOnlyOnRootProjectEnforcement=true
