--- a/pso-bridge-berlioz/build.gradle
+++ b/pso-bridge-berlioz/build.gradle
@@ -9,6 +9,8 @@ dependencies {
   api('org.slf4j:slf4j-api:1.7.30')
   api('org.pageseeder.xmlwriter:pso-xmlwriter:1.0.3')
   api('org.pageseeder.berlioz:pso-berlioz:0.11.6')
+  //JDK 11 does not java this module (xml.bind) http://openjdk.java.net/jeps/320
+  api('jakarta.xml.bind:jakarta.xml.bind-api:2.3.2')
 
   compileOnly('javax.servlet:javax.servlet-api:3.1.0')
   compileOnly('org.eclipse.jdt:org.eclipse.jdt.annotation:2.0.0')
