--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
   api('org.pageseeder.xmlwriter:pso-xmlwriter:1.0.3')
   api('net.sf.ehcache:ehcache:2.8.8')
   api('javax.cache:cache-api:1.0.0')
+  //JDK 11 does not java this module (xml.bind) http://openjdk.java.net/jeps/320
+  api('jakarta.xml.bind:jakarta.xml.bind-api:2.3.2')
 
   implementation('org.slf4j:slf4j-api:1.7.30')
 
